Drum Kit Project Modified

--- a/day01-drum-kit/index.html
+++ b/day01-drum-kit/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <main>
+        <h1>Drum Kit</h1>
+        <p>Tap the keys or click the pads to play the beat. This is an interactive JavaScript-powered drum machine built from scratch using only HTML, CSS, and JS. Play around and feel the rhythm!</p>
         <div class="keys">
             <div data-key="65" class="key" >
                 <kbd>A</kbd>
