--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1>Javascript30</h1>
     <ol>
-        <li><a href="/day01-drum-kit/">Day 1 - Drum Kit</a></a></li>
+        <li><a href="./day01-drum-kit/">Day 1 - Drum Kit</a></a></li>
     </ol>
     
 </body>
