--- a/day02-clock/index.html
+++ b/day02-clock/index.html
@@ -74,13 +74,13 @@
       }
 
       .search .result {
-        padding: 20px;
-        padding-top: 0;
         position: absolute;
-        width: 90%;
-        max-height: 100px;
+        width: 100%;
+        max-height: 144px;
         overflow-y: auto;
         overflow-x: hidden;
+        box-shadow: 0 4px 10px -2px  black;
+        border-radius: 2px 2px 10px 10px;
       }
 
       .search .result span {
@@ -90,6 +90,7 @@
         background-color: rgb(183 162 135);
         color: aliceblue;
         cursor: pointer;
+        border-bottom: 1px solid;
       }
 
       .timeZone {
@@ -105,10 +106,6 @@
 
         .digital-clock {
           font-size: 3rem;
-        }
-
-        .search {
-            width: 60vw;
         }
 
         .timeZone {
