--- a/day02-clock/index.html
+++ b/day02-clock/index.html
@@ -169,7 +169,7 @@
         minuteHand.style.transform = `rotate(${((minute / 60) * 360) + 90}deg)`;
         hourHand.style.transform = `rotate(${((hour / 12) * 360) + 90}deg)`;
         // update digital clock time
-        digitalClock.innerHTML = `${hour}:${minute}:${second}`;
+        digitalClock.innerHTML = `${hour}:${minute}:${second} ${timePeriod}`;
       }
       // update time on each seconds
       setInterval(setTime, '1000');
