Update: index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ol>
         <li><a href="./day01-drum-kit/">Day 1 - Drum Kit</a></a></li>
         <li><a href="./day02-clock/">Day 2 - Clock</a></a></li>
+        <li><a href="./day03-css-variables/">Day 3 - CSS Variables</a></a></li>
     </ol>
     
 </body>
