Update project links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="./day01-drum-kit/">Day 1 - Drum Kit</a></a></li>
         <li><a href="./day02-clock/">Day 2 - Clock</a></a></li>
         <li><a href="./day03-css-variables/">Day 3 - CSS Variables</a></a></li>
+        <li><a href="./day04-array-cardio-01/">Day 4 - Array Catdio 01</a></a></li>
     </ol>
     
 </body>
