--- a/day02-clock/index.html
+++ b/day02-clock/index.html
@@ -6,115 +6,7 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <style>
-      html {
-        font-size: 16px;
-        background-color: antiquewhite;
-        text-align: center;
-        font-family: 'Orbitron', sans-serif;
-      }
-
-      body {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-      }
-
-      .clock {
-        margin: 50px auto;
-        border: 20px solid black;
-        border-radius: 50%;
-        box-shadow: 0 4px 20px rgb(61, 40, 8);
-        height: 200px;
-        width: 200px;
-        position: relative;
-        padding: 20px;
-      }
-
-      .clock-face {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        transform: translateY(-3px);
-      }
-
-      .hand {
-        width: 50%;
-        height: 5px;
-        background: rgb(20, 41, 41);
-        position: absolute;
-        top: 50%;
-        transform-origin: 100%;
-      }
-
-      .digital-clock {
-        display: block;
-        font-size: 6rem;
-        font-weight: bold;
-      }
-
-      .search {
-        width: 80vw;
-        max-width: 500px;
-        margin-top: 50px;
-        text-align: left;
-        position: relative;
-        z-index: 15;
-      }
-
-      .search input {
-        background-color: antiquewhite;
-        border: 1px solid black;
-        box-shadow: 0 4px 10px black;
-        height: 40px;
-        width: 100%;
-        border-radius: 10px;
-        padding: 10px;
-      }
-
-      .search .result {
-        position: absolute;
-        width: 100%;
-        max-height: 144px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        box-shadow: 0 4px 10px -2px  black;
-        border-radius: 2px 2px 10px 10px;
-      }
-
-      .search .result span {
-        width: 100%;
-        display: none;
-        padding: 5px;
-        background-color: rgb(183 162 135);
-        color: aliceblue;
-        cursor: pointer;
-        border-bottom: 1px solid;
-      }
-
-      .timeZone {
-        font-size: 26px;
-        font-weight: bold;
-      }
-
-      @media only screen and (max-width : 600px) {
-        .clock {
-          width: 150px;
-          height: 150px;
-        }
-
-        .digital-clock {
-          font-size: 3rem;
-        }
-
-        .timeZone {
-            font-size: 20px;
-        }
-      }
-
-      
-    </style>
+   
     <!-- TimeZone Serach Section -->
     <div class="search">
       <div class="timeZone"></div>
@@ -131,79 +23,7 @@
     </div>
     <!-- Digital Clock -->
     <div class="digital-clock"> 10:10:10 </div>
-    <script>
-      const hand = document.querySelector('.hand');
-      const secondHand = document.querySelector('.second-hand');
-      const minuteHand = document.querySelector('.min-hand');
-      const hourHand = document.querySelector('.hour-hand');
-      const digitalClock = document.querySelector('.digital-clock');
-      const defaultTimeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-      const searchResults = document.querySelector('.result');
-      const resultTexts = document.getElementsByClassName('resultText');
-      const searchInput = document.getElementById('timeZone');
-      // Function To Set Time in Clocks
-      function setTime() {
-        date = new Date();
-        let selectedTimeZone = localStorage.getItem('selectedTimeZone');
-        if (!selectedTimeZone) selectedTimeZone = defaultTimeZone;
-        console.log(selectedTimeZone);
-        let options = {
-          timeZone: selectedTimeZone, // Set the timezone to selectedTimeZone
-          hour: '2-digit', // two-digit hour format (e.g., "07" instead of "7")
-          minute: '2-digit', // two-digit minute format
-          second: '2-digit', // two-digit second format
-          hour12: true // 12 hour format
-        };
-        let formatter = new Intl.DateTimeFormat('en-US', options);
-        let specificTime = formatter.format(date);
-        let [hour, minute, second] = specificTime.split(":");
-        let timePeriod = second.split(" ")[1]; // get AM or PM
-        second = second.split(" ")[0]; // remove AM or PM from seconds
-        // display selected Time Zone
-        let timeZoneText = document.querySelector('.timeZone');
-        timeZoneText.innerHTML = `Time Zone : ${selectedTimeZone}`;
-        // transition style
-        hand.style.transition = "all 0.1s cubic-bezier(0.25, 0.1, 0.23, 3.32)";
-        // move hands based on current time 
-        secondHand.style.transform = `rotate(${((second / 60) * 360) + 90}deg)`;
-        minuteHand.style.transform = `rotate(${((minute / 60) * 360) + 90}deg)`;
-        hourHand.style.transform = `rotate(${((hour / 12) * 360) + 90}deg)`;
-        // update digital clock time
-        digitalClock.innerHTML = `${hour}:${minute}:${second} ${timePeriod}`;
-      }
-      // update time on each seconds
-      setInterval(setTime, '1000');
-      // get all supported time zones
-      let timeZones = Intl.supportedValuesOf('timeZone');
-      timeZones = timeZones.splice(",");
-      // create search results for time zones
-      timeZones.forEach(element => {
-        let resultSpan = document.createElement("span");
-        resultSpan.textContent = element;
-        resultSpan.classList.add("resultText");
-        searchResults.appendChild(resultSpan);
-      });
-      // Display search results based on user input
-      searchInput.addEventListener("keyup", function() {
-        searchResults.style.display = "block";
-        let searchValue = searchInput.value.toLowerCase();
-        for (result of resultTexts) {
-          resultValue = result.textContent.toLowerCase();
-          if (resultValue.includes(searchValue)) {
-            result.style.display = "block";
-            result.addEventListener("click", function() {
-              localStorage.setItem('selectedTimeZone', this.textContent);
-              console.log(localStorage.getItem('selectedTimeZone'));
-              searchResults.style.display = "none";
-            });
-          } else {
-            result.style.display = "none";
-          }
-        }
-        window.addEventListener("click", function() {
-          searchResults.style.display = "none";
-        })
-      })
-    </script>
+   
+    <script src="./script.js"></script>
   </body>
 </html>
