Update Project 03: Add brief description in header

--- a/day03-css-variables/index.html
+++ b/day03-css-variables/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
 
-
-    <h2>CSS Variables and <span class="hl">Javascript</span>
-    </h2>
+    <header>
+      <h2>CSS Variables and <span class="hl">Javascript</span></h2>
+      <p>This project demonstrates how to dynamically update CSS variables (custom properties) using JavaScript. By adjusting the spacing, blur, and base color, you can see real-time changes to the image styling.</p>
+    </header>
     <!-- Controls -->
     <div class="controls">
       <label for="spacing">Spacing:
