--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <h1>Javascript30</h1>
     <ol>
-        <li><a href="./day01-drum-kit/">Day 1 - Drum Kit</a></a></li>
-        <li><a href="./day02-clock/">Day 2 - Clock</a></a></li>
-        <li><a href="./day03-css-variables/">Day 3 - CSS Variables</a></a></li>
-        <li><a href="./day04-array-cardio-01/">Day 4 - Array Catdio 01</a></a></li>
+        <li><a href="./day01-drum-kit/">Day 1 - Drum Kit</a></li>
+        <li><a href="./day02-clock/">Day 2 - Clock</a></li>
+        <li><a href="./day03-css-variables/">Day 3 - CSS Variables</a></li>
+        <li><a href="./day04-array-cardio-01/">Day 4 - Array Catdio 01</a></li>
+        <li><a href="./day05-flex-panel-gallery/">Day 5 - Flex Panel Gallery</a></li>
     </ol>
     
 </body>
