Day 06 - Type Ahead

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="./day03-css-variables/">Day 3 - CSS Variables</a></li>
         <li><a href="./day04-array-cardio-01/">Day 4 - Array Catdio 01</a></li>
         <li><a href="./day05-flex-panel-gallery/">Day 5 - Flex Panel Gallery</a></li>
+        <li><a href="./day06-type-ahead/">Day 6 - Type Ahead</a></li>
     </ol>
     
 </body>
