Update: popup growth rate parsing, popup style

--- a/day06-type-ahead/index.html
+++ b/day06-type-ahead/index.html
@@ -12,17 +12,7 @@
             </ul>
         </form>
         <div class="popup">
-            <div class="popup-content">
-                <ul>
-                <li><strong>City:</strong> New York</li>
-                <li><strong>Growth (2000 - 2013):</strong> 4.8%</li>
-                <li><strong>Latitude:</strong> 40.7127837</li>
-                <li><strong>Longitude:</strong> -74.0059413</li>
-                <li><strong>Population:</strong> 8,405,837</li>
-                <li><strong>Rank:</strong> 1</li>
-                <li><strong>State:</strong> New York</li>
-            </ul>
-            </div>
+            <div class="popup-content"></div>
             <button class="close-button">close</button>
         </div>
         
