Array Cardio 02 - Update: Add brief description of project

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <li><a href="./day01-drum-kit/">Day 1 - Drum Kit</a></li>
         <li><a href="./day02-clock/">Day 2 - Clock</a></li>
         <li><a href="./day03-css-variables/">Day 3 - CSS Variables</a></li>
-        <li><a href="./day04-array-cardio-01/">Day 4 - Array Catdio 01</a></li>
+        <li><a href="./day04-array-cardio-01/">Day 4 - Array Cardio 01</a></li>
         <li><a href="./day05-flex-panel-gallery/">Day 5 - Flex Panel Gallery</a></li>
         <li><a href="./day06-type-ahead/">Day 6 - Type Ahead</a></li>
-    </ol>
-    
+        <li><a href="./day07-array-cardio-02/">Day 7 - TArray Cardio 02</a></li>
+    </ol>    
 </body>
 </html>
