Update index file with HTML5 Canvas project link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <li><a href="./day04-array-cardio-01/">Day 4 - Array Cardio 01</a></li>
         <li><a href="./day05-flex-panel-gallery/">Day 5 - Flex Panel Gallery</a></li>
         <li><a href="./day06-type-ahead/">Day 6 - Type Ahead</a></li>
-        <li><a href="./day07-array-cardio-02/">Day 7 - TArray Cardio 02</a></li>
-    </ol>    
+        <li><a href="./day07-array-cardio-02/">Day 7 - Array Cardio 02</a></li>
+        <li><a href="./day08-html-canvas/">Day 8 - HTML5 Canvas</a></li>
+    </ol>     
 </body>
 </html>
