--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./day06-type-ahead/">Day 6 - Type Ahead</a></li>
         <li><a href="./day07-array-cardio-02/">Day 7 - Array Cardio 02</a></li>
         <li><a href="./day08-html-canvas/">Day 8 - HTML5 Canvas</a></li>
+        <li><a href="./day09-dev-tools-tricks/">Day 9 - Dev Tools Tricks</a></li>
     </ol>     
 </body>
 </html>
