Day 10 - Hold Shift to Check Multiple Checkboxes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="./day07-array-cardio-02/">Day 7 - Array Cardio 02</a></li>
         <li><a href="./day08-html-canvas/">Day 8 - HTML5 Canvas</a></li>
         <li><a href="./day09-dev-tools-tricks/">Day 9 - Dev Tools Tricks</a></li>
-    </ol>     
+        <li><a href="./day10-hold-shift-checkboxes/">Day 10 - Hold Shift - Checkboxes</a></li>
+    </ol>       
 </body>
 </html>
