--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./day08-html-canvas/">Day 8 - HTML5 Canvas</a></li>
         <li><a href="./day09-dev-tools-tricks/">Day 9 - Dev Tools Tricks</a></li>
         <li><a href="./day10-hold-shift-checkboxes/">Day 10 - Hold Shift - Checkboxes</a></li>
+        <li><a href="./day11-custom-video-player/">Day 11 - Custom Video player</a></li>
     </ol>       
 </body>
 </html>
