--- a/day11-custom-video-player/index.html
+++ b/day11-custom-video-player/index.html
@@ -8,12 +8,11 @@
 <body>
 
     <div class="about">
-        <h1>Custom Video Playe</h1>
-        <p>This is a custom video player</p>
+        <h1>Custom Video Player</h1>
     </div>
     
     <div class="player">
-        <video class="player__video viewer" src="./652333414.mp4"></video>
+        <video class="player__video viewer" src="./652333414.mp4" poster="./thumbnail.webp"></video>
 
         <div class="player__controls">
         <div class="progress">
@@ -24,6 +23,7 @@
         <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
         <button data-skip="-10" class="player__button">« 10s</button>
         <button data-skip="25" class="player__button">25s »</button>
+        <button class="player__button full-screen">⛶</button>
         </div>
     </div>
 
