Day 13 - Slide In On Scroll

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="./day10-hold-shift-checkboxes/">Day 10 - Hold Shift - Checkboxes</a></li>
         <li><a href="./day11-custom-video-player/">Day 11 - Custom Video player</a></li>
         <li><a href="./day12-key-sequence-detection/">Day 12 - Key Sequence Detection</a></li>
+        <li><a href="./day13-slide-in-on-scroll/">Day 13 - Slide In On Scroll</a></li>
     </ol>       
 </body>
 </html>
