--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="./day11-custom-video-player/">Day 11 - Custom Video player</a></li>
         <li><a href="./day12-key-sequence-detection/">Day 12 - Key Sequence Detection</a></li>
         <li><a href="./day13-slide-in-on-scroll/">Day 13 - Slide In On Scroll</a></li>
+        <li><a href="./day14-js-reference-vs-copy/">Day 14 - JS Reference Vs Copy</a></li>
     </ol>       
 </body>
 </html>
