Day 16 - Shadow On Mouse Move

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./day13-slide-in-on-scroll/">Day 13 - Slide In On Scroll</a></li>
         <li><a href="./day14-js-reference-vs-copy/">Day 14 - JS Reference Vs Copy</a></li>
         <li><a href="./day15-localstorage-and-event-delegation/">Day 15 - LocalStorage and Event Delegation</a></li>
+        <li><a href="./day16-shadow-on-mouse-move/">Day 16 - Shadow On Mouse Move</a></li>
     </ol>       
 </body>
 </html>
