--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="./day14-js-reference-vs-copy/">Day 14 - JS Reference Vs Copy</a></li>
         <li><a href="./day15-localstorage-and-event-delegation/">Day 15 - LocalStorage and Event Delegation</a></li>
         <li><a href="./day16-shadow-on-mouse-move/">Day 16 - Shadow On Mouse Move</a></li>
+        <li><a href="./day17-sort-without-articles/">Day 17 - Sort Without Articles</a></li>
     </ol>       
 </body>
 </html>
