--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <li><a href="./day15-localstorage-and-event-delegation/">Day 15 - LocalStorage and Event Delegation</a></li>
         <li><a href="./day16-shadow-on-mouse-move/">Day 16 - Shadow On Mouse Move</a></li>
         <li><a href="./day17-sort-without-articles/">Day 17 - Sort Without Articles</a></li>
+        <li><a href="./day18-adding-up-times-with-reduce/">Day 18 - Adding Up Times with Reduce</a></li>
+        <li><a href="./day19-webcam-fun/">Day 19 - WebCam Fun</a></li>
     </ol>       
 </body>
 </html>
