--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="./day17-sort-without-articles/">Day 17 - Sort Without Articles</a></li>
         <li><a href="./day18-adding-up-times-with-reduce/">Day 18 - Adding Up Times with Reduce</a></li>
         <li><a href="./day19-webcam-fun/">Day 19 - WebCam Fun</a></li>
+        <li><a href="./day20-native-speech-recognition/">Day 20 - Native Speech Recognition</a></li>
     </ol>       
 </body>
 </html>
