--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="./day19-webcam-fun/">Day 19 - WebCam Fun</a></li>
         <li><a href="./day20-native-speech-recognition/">Day 20 - Native Speech Recognition</a></li>
         <li><a href="./day21-geolocation/">Day 21 - Geolocation</a></li>
-    </ol>       
+        <li><a href="./day22-follow-along-link-highlighter/">Day 22 - Follow Along Link Highlighter</a></li>
+</ol>       
 </body>
 </html>
