Day 23 - Speech Synthesis

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="./day20-native-speech-recognition/">Day 20 - Native Speech Recognition</a></li>
         <li><a href="./day21-geolocation/">Day 21 - Geolocation</a></li>
         <li><a href="./day22-follow-along-link-highlighter/">Day 22 - Follow Along Link Highlighter</a></li>
-</ol>       
+        <li><a href="./day23-speech-synthesis/">Day 23 - Speech Synthesis</a></li>
+    </ol>
 </body>
 </html>
