--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="./day21-geolocation/">Day 21 - Geolocation</a></li>
         <li><a href="./day22-follow-along-link-highlighter/">Day 22 - Follow Along Link Highlighter</a></li>
         <li><a href="./day23-speech-synthesis/">Day 23 - Speech Synthesis</a></li>
+        <li><a href="./day24-sticky-nav/">Day 24 - Sticky Nav</a></li>
     </ol>
 </body>
 </html>
