--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="./day22-follow-along-link-highlighter/">Day 22 - Follow Along Link Highlighter</a></li>
         <li><a href="./day23-speech-synthesis/">Day 23 - Speech Synthesis</a></li>
         <li><a href="./day24-sticky-nav/">Day 24 - Sticky Nav</a></li>
+        <li><a href="./day25-event-capture-and-once/">Day 25 - Event Capture, Propagation, Bubbling, and Once</a></li>    
     </ol>
 </body>
 </html>
