Day 27 - Click and Drag

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <li><a href="./day22-follow-along-link-highlighter/">Day 22 - Follow Along Link Highlighter</a></li>
         <li><a href="./day23-speech-synthesis/">Day 23 - Speech Synthesis</a></li>
         <li><a href="./day24-sticky-nav/">Day 24 - Sticky Nav</a></li>
-        <li><a href="./day25-event-capture-and-once/">Day 25 - Event Capture, Propagation, Bubbling, and Once</a></li>    
+        <li><a href="./day25-event-capture-and-once/">Day 25 - Event Capture, Propagation, Bubbling, and Once</a></li>
+        <li><a href="./day26-follow-along-nav/">Day 26 - Follow Along Nav</a></li>    
+        <li><a href="./day27-click-and-drag/">Day 27 - Click and Drag</a></li>
     </ol>
 </body>
 </html>
