Day 28 - Video Speed Controller

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="./day25-event-capture-and-once/">Day 25 - Event Capture, Propagation, Bubbling, and Once</a></li>
         <li><a href="./day26-follow-along-nav/">Day 26 - Follow Along Nav</a></li>    
         <li><a href="./day27-click-and-drag/">Day 27 - Click and Drag</a></li>
+        <li><a href="./day28-video-speed-controller/">Day 28 - Video Speed Controller</a></li>
     </ol>
 </body>
 </html>
