--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="./day27-click-and-drag/">Day 27 - Click and Drag</a></li>
         <li><a href="./day28-video-speed-controller/">Day 28 - Video Speed Controller</a></li>
         <li><a href="./day29-countdown-timer/">Day 29 - Countdown Timer</a></li>
+        <li><a href="./day30-wack-a-mole/">Day 30 - Wack A Mole</a></li>
     </ol>
 </body>
 </html>
